EDU-6393: Fix licence block validation performance (#82)